<resources>
    <string name="app_name">Fire Chat</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_fragment_message">Please Login to Fire chat with email</string>
    <string name="login_btn_txt">Login To Fire Chat</string>
    <string name="or">OR</string>
    <string name="create_new_account_btn_txt">Create New Account</string>
    <string name="signup_btn_txt">SignUp To Fire Chat</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_photo">Select Photo</string>
    <string name="have_account"><u>Already have Account ? Login</u></string>
    <string name="recent_msg_empty">World is Better when we talk to each other</string>
    <string name="test">World is Better when we talk to each other
    World is Better when we talk to each other
    World is Better when we talk to each other
    World is Better when we talk to each other
        World is Better when we talk to each other
    </string>
</resources>
